correcting overlap of side bars

--- a/src/css/viewer.css
+++ b/src/css/viewer.css
@@ -21,7 +21,7 @@ img{
 }
 
 .class_UI{
-    top: 25px;
+    top: 33px;
     background-color: grey;
     position: absolute;
     z-index: 2;
